pxc/tests/test_154_rawarray/ra2.px
public namespace ra2;
public import common -;
public import container::raw -;

{
  rawarray{int, 3} x;
  const y = x; // error
}

